--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "astrosat"
+name = "satastro"
 version = "1.0.0"
 authors = [
     {name="Aurélien Genin", email="aurelien.genin@polytechnique.org"}
